[Qt] Fix inconsistent DLL linkage on Windows with WebKit1 https://bugs.webkit.org/show_bug.cgi?id=91375

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-07-16
Reviewed by Laszlo Gombos.

Export QWebHistoryItemPrivate as required for tests. Unfortunately we cannot use
Q_AUTOTEST_EXPORT outside of Qt.

* Api/qwebhistory_p.h:

Canonical link: https://commits.webkit.org/109198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122727 268f45cc-cd09-0410-ab3c-d52691b4dbfc