Source/WebKit/qt/Api/qwebhistory_p.h
@@ -22,12 +22,13 @@
 
 #include "BackForwardListImpl.h"
 #include "HistoryItem.h"
+#include "qwebkitglobal.h"
 #include <QtCore/qglobal.h>
 #include <QtCore/qshareddata.h>
 
 class QWebPagePrivate;
 
-class Q_AUTOTEST_EXPORT QWebHistoryItemPrivate : public QSharedData {
+class QWEBKIT_EXPORT QWebHistoryItemPrivate : public QSharedData {
 public:
     static QExplicitlySharedDataPointer<QWebHistoryItemPrivate> get(QWebHistoryItem* q)
     {
